--- a/app/styles/partials/footer.scss
+++ b/app/styles/partials/footer.scss
@@ -23,7 +23,7 @@ footer {
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .main-container {
-    margin: 20px 0;
+    margin: $page-top-margin 0;
     min-height: 50vh;
   }
 
